objects/ptt_cm_Sales_Channel__c.object
<CustomObject>
    <description>Sales Channel for CM</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CM Sales Channels</relationshipLabel>
        <relationshipName>Sales_Channels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Business_Unit__c</fullName>
        <formula>Account_Name__r.sf42_Business_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_remote_access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote access</label>
        <type>Checkbox</type>
    </fields>
    <label>PT - CM Sales Channel</label>
    <nameField>
        <label>Sales Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CM Sales Channels</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>